# multi-tenant-rag

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: __init__.py  agent.py  auth.py  conversations.py  documents.py  incidents.py  queries.py  tasks.py  tenants.py
backend/app/database/: __init__.py  connection.py  session.py
backend/app/models/: __init__.py  conversation.py  document.py  query.py  task.py  tenant.py
backend/app/schemas/: __init__.py  agent.py  auth.py  conversation.py  document.py  query.py  task.py
backend/app/scripts/: __init__.py  evaluate_retrieval.py  manage_documents.py  seed_data.py
backend/app/services/: agent_service.py  auth_service.py  cache_service.py  conversation_service.py  document_service.py  embedding_service.py  intent_service.py  llm_service.py  prompt_template_service.py  rerank_service.py  retrieval_service.py  task_service.py  tenant_service.py  vector_service.py
backend/seed_data/: corpus.json
backend/tests/: conftest.py  test_api_endpoints.py  test_auth_service.py  test_conversation_service.py  test_document_service.py  test_documents_and_queries.py  test_documents_api.py  test_manage_documents_seed.py
backend/uploads/: 40515666-2574-4911-a434-fdab71417dd5_db2fb81a-1700-4e06-a27d-babeae339ef2.md  52ea934d-4094-40ba-a686-f1853eec7d6e_8850038e-f6da-455b-921e-52175d86b7b4.md  eba88e0b-fc77-4d3f-b018-492b01aa40c0_5e2adddb-74b2-43ea-bb7b-aed30366a3f6.md
docs/: README.md  quickstart.md
frontend/: .dockerignore  Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
(+29 files in other folders)
