[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-tenant-rag-backend"
version = "0.1.0"
description = "Backend for the Multi-Tenant RAG & Agentic Operations Assistant"
requires-python = ">=3.11"
authors = [{ name = "Prince Mensah" }]
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "SQLAlchemy==2.0.42",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "structlog==25.4.0",
    "qdrant-client==1.15.1",
    "python-multipart==0.0.20",
    "python-dotenv==1.1.1",
    "redis[hiredis]==5.0.4",
    "passlib[bcrypt]==1.7.4",
    "bcrypt<4.1",
    "PyJWT==2.10.1",
    "python-jose[cryptography]==3.3.0",
    "alembic==1.16.4",
    "numpy==2.1.3",
    "sentence-transformers==2.7.0",
    "PyPDF2==3.0.1",
    "python-docx==1.1.2",
    "openai==1.98.0",
    "anthropic==0.60.0",
    "email-validator==2.3.0",
    "psycopg[binary]==3.3.2",
    "watchfiles==0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-mock==3.14.0",
    "httpx==0.27.2",
    "ruff==0.6.9",
    "mypy==1.11.2",
    "types-redis==4.6.0.20241004",
    "types-passlib==1.7.7.20240819",
]

[tool.pytest.ini_options]
addopts = "--strict-markers"
pythonpath = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203", "E266", "E501", "B008"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
mypy_path = "app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "tests*"]
